--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "southandy@gmail.com",
            comment = c(ORCID = "0000-0003-4051-6135"))
-Description: Visualisation of Sub-National Covid Data for Africa
+Description: Visualisation of Sub-National Covid Data for Africa.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
@@ -17,3 +17,6 @@ Depends:
     R (>= 2.10)
 Imports:
     ggplot2
+Suggests:
+    lubridate,
+    shiny
