--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
 Imports:
-    ggplot2
+    ggplot2,
+    lubridate
 Suggests:
-    lubridate,
     shiny
