--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(ggplot2,scale_fill_distiller)
 importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,parse_date_time)
