put data_update into func and update the data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 export(afcov_heatmap)
 export(runviewer)
+export(update_data)
+importFrom(dplyr,anti_join)
+importFrom(dplyr,left_join)
+importFrom(dplyr,select)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_tile)
@@ -11,4 +15,15 @@ importFrom(ggplot2,scale_fill_distiller)
 importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,dmy)
 importFrom(lubridate,parse_date_time)
+importFrom(magrittr,"%>%")
+importFrom(purrr,pluck)
+importFrom(readr,locale)
+importFrom(rhdx,get_resources)
+importFrom(rhdx,get_rhdx_config)
+importFrom(rhdx,read_resource)
+importFrom(rhdx,search_datasets)
+importFrom(rhdx,set_rhdx_config)
+importFrom(sf,st_drop_geometry)
+importFrom(usethis,use_data)
