--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(join_subnat_to_map)
 export(runviewer)
 export(update_data)
 import(ggplot2)
+importFrom(dplyr,"%>%")
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_tile)
@@ -18,4 +19,5 @@ importFrom(ggplot2,scale_fill_distiller)
 importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,ceiling_date)
 importFrom(lubridate,parse_date_time)
